Add test:clean script to package.json
Occasionally the Jest cache will retain old
versions of test files, which can cause
unexpected errors from failing tests
which no longer exist locally.

`jest --clearCache` clears the Jest cache,
added a package.json script to invoke this,
run via `npm run test:clean`.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint --ignore-pattern node_modules --fix \"lib/**/*.ts\"",
     "prepublishOnly": "npm run compile && npm run lint",
     "test": "jest",
+    "test:clean": "jest --clearCache",
     "watch": "tsc -w"
   },
   "dependencies": {
