--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "watch": "tsc -w"
   },
   "dependencies": {
+    "@aws-cdk/aws-iam": "1.51.0",
+    "@aws-cdk/aws-s3": "1.51.0",
     "@aws-cdk/core": "1.51.0",
     "source-map-support": "^0.5.16"
   },
