--- a/package.json
+++ b/package.json
@@ -15,18 +15,18 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@aws-cdk/aws-iam": "1.51.0",
-    "@aws-cdk/aws-s3": "1.51.0",
-    "@aws-cdk/core": "1.51.0",
+    "@aws-cdk/aws-iam": "~1.133.0",
+    "@aws-cdk/aws-s3": "~1.133.0",
+    "@aws-cdk/core": "~1.133.0",
     "source-map-support": "^0.5.16"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.51.0",
+    "@aws-cdk/assert": "~1.133.0",
     "@types/jest": "^25.2.1",
     "@types/node": "10.17.5",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
-    "aws-cdk": "1.51.0",
+    "aws-cdk": "~1.133.0",
     "eslint": "^7.4.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jest": "^23.9.0",
