--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "eslint-plugin-promise": "^4.2.1",
     "jest": "^27.0.0",
     "ts-jest": "^27.0.0",
-    "ts-node": "^8.1.0",
-    "typescript": "~3.8.0"
+    "ts-node": "^9.1",
+    "typescript": "^4.5.1"
   },
   "jest": {
     "preset": "ts-jest",
