Upgrade aws-cdk to v2 without upgrading AWS component libraries
Initial configuration changes to upgrade aws-cdk from v1 to v2.
A subsequent commit will upgrade individual AWS dependencies
which will include code changes.

--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
     "source-map-support": "^0.5.16"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "~1.133.0",
+    "@aws-cdk/assert": "^2.0.0",
     "@types/jest": "^27.0",
     "@types/node": "10.17.5",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
-    "aws-cdk": "~1.133.0",
+    "aws-cdk": "^2.0.0",
     "eslint": "^7.4.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jest": "^23.9",
