--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "type": "git",
     "url": "https://github.com/msayson/cdk-demo.git"
   },
-  "version": "0.1.0",
+  "version": "0.2.0",
   "bin": {
     "cdk-demo": "bin/cdk-demo.js"
   },
@@ -20,10 +20,13 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@aws-cdk/aws-iam": "~1.133.0",
-    "@aws-cdk/aws-s3": "~1.133.0",
-    "@aws-cdk/core": "~1.133.0",
+    "aws-cdk-lib": "^2.0.0",
+    "constructs": "^10.0.0",
     "source-map-support": "^0.5.16"
+  },
+  "peerDependencies": {
+    "aws-cdk-lib": "^2.0.0",
+    "constructs": "^10.0.0"
   },
   "devDependencies": {
     "@aws-cdk/assert": "^2.0.0",
@@ -31,7 +34,8 @@
     "@types/node": "10.17.5",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
-    "aws-cdk": "^2.0.0",
+    "aws-cdk-lib": "^2.0.0",
+    "constructs": "^10.0.0",
     "eslint": "^7.4.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jest": "^23.9",
