Fix Jest coverage for GitHub builds
Update Jest config to explicitly exclude *.d.ts
files so that coverage is only calculated
based on the actual source files.

Update GitHub build workflow to no longer run
the step that generates *.js and *.d.ts files
that breaks Jest test runs.

--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
     "collectCoverageFrom": [
       "<rootDir>/lib/**/*.ts"
     ],
+    "coveragePathIgnorePatterns": [
+      "!*.d.ts"
+    ],
     "coverageReporters": [
       "text",
       "cobertura",
