Add typedoc integration
Add mechanism for generating code documentation
via typedoc that developers can view in a
browser.

Update class comments to follow typedoc-compliant
documentation syntax.

Usage: Run `npm run docs` and then open
docs/index.html in a local browser.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "**/.vscode": true,
         "**/cdk.out": true,
         "**/coverage": true,
+        "**/docs": true,
         "**/node_modules": true
     }
 }
