--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,15 @@
     "strictPropertyInitialization": false,
     "typeRoots": ["./node_modules/@types"]
   },
-  "exclude": ["cdk.out"]
+  "exclude": ["cdk.out"],
+  "typedocOptions": {
+    "entryPoints": ["lib/constructs/index.ts"],
+    "exclude": [
+      "**/node_modules/**"
+    ],
+    "excludePrivate": true,
+    "excludeProtected": true,
+    "excludeExternals": true,
+    "out": "docs"
+  }
 }
