--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "tsc",
     "cdk": "cdk",
     "compile": "tsc",
+    "docs": "typedoc",
     "lint": "eslint --ignore-pattern node_modules --fix \"lib/**/*.ts\"",
     "prepublishOnly": "npm run compile && npm run lint",
     "test": "jest",
@@ -37,6 +38,7 @@
     "jest": "^29.0",
     "ts-jest": "^29.1",
     "ts-node": "^10.9.1",
+    "typedoc": "^0.24.1",
     "typescript": "^5.0.3"
   },
   "jest": {
@@ -49,7 +51,8 @@
       "<rootDir>/lib/**/*.ts"
     ],
     "coveragePathIgnorePatterns": [
-      "!*.d.ts"
+      "!*.d.ts",
+      "index.ts"
     ],
     "coverageReporters": [
       "text",
